--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-styled-components": "^3.2.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-intersection-observer": "^8.26.2",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
